web-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        version: v1
    spec:
      containers:
      - name: web
        image: nginx:1.20
        resources:
          limits:
            memory: "50Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            name: nginx-config
          - mountPath: /usr/share/nginx/html/index.html
            subPath: index.html
            name: index
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: index
          configMap:
            name: index
