ingress-route.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: web-gateway
spec:
  hosts:
  - "*"
  gateways:
  - istio-ingressgateway
  http:
  - route:
    - destination:
        host: web
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: web-gateway
spec:
  host: web
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: version
    outlierDetection:
      consecutive5xxErrors: 7
      interval: 5m
      baseEjectionTime: 15m
